# SSAFY-gwantongPJT

./: README.md  crawling.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_delete_user.py  0003_initial.py
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  App.vueZone.Identifier
frontend/src/components/: Footer.vue  Header.vue  Layout.vue
frontend/src/router/: index.js
frontend/src/stores/: chatbot.js  dashboard.js  news.js  user.js
frontend/src/views/: ChatbotView.vue  DashboardView.vue  HomeView.vue  LoginView.vue  NewsPostsView.vue  SearchNewsView.vue  SignupView.vue
news/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
news/management/commands/: crawl_news.py  init_category_embedding.py  search_articles.py
news/migrations/: 0001_enable_pgvector.py  0001_initial.py  0002_category_article_category.py  0003_category_code.py  0004_rename_embeddign_category_embedding.py
raw_data/: university_news.json
